force-app/main/default/objects/AssignedResource/fields/FSM_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExternalId__c</fullName>
    <description>External ID</description>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>