force-app/main/default/objects/AssignedResource/fields/FSM_ScheduledStartDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_ScheduledStartDate__c</fullName>
    <description>Created as part of SFS-4870</description>
    <formula>ServiceAppointment.SchedStartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Start Date</label>
    <type>DateTime</type>
</CustomField>