force-app/main/default/objects/AssignedResource/fields/FSM_Service_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>FSM_Service_Resource_Name__c</fullName>
    <formula>FSM_User__r.FirstName &amp; &apos; &apos; &amp; FSM_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Resource Name</label>
    <type>Text</type>
</CustomField>