force-app/main/default/objects/AssignedResource/fields/FSM_User__c.field-meta.xml
<CustomField>
    <fullName>FSM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated with the assigned user-id when assigned resource record is created/updated.
SFS-4870</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>